cleaned up layout of about page. added footer

--- a/app/core/index.html
+++ b/app/core/index.html
@@ -28,6 +28,8 @@
 
     <div ng-view id="main-content"></div>
 
+    <!-- included on a per page basis, for the time being
+    <div ng-include src="'views/footer.html'"></div> -->
 
     <!-- END - Page content-->
 
