added ioicon for sprites, fixed foorter display

--- a/app/core/index.html
+++ b/app/core/index.html
@@ -10,6 +10,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../bower_components/ionicons/css/ionicons.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -27,6 +28,8 @@
     <div ng-include src="'views/header.html'"></div>
 
     <div ng-view id="main-content"></div>
+
+    <div ng-include src="'views/footer.html'"></div>
 
     <!-- included on a per page basis, for the time being
     <div ng-include src="'views/footer.html'"></div> -->
