--- a/app/core/index.html
+++ b/app/core/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js">
+<html class="no-js carbon dark">
   <head>
     <meta charset="utf-8">
     <title>John M Hofrichter</title>
