--- a/app/core/index.html
+++ b/app/core/index.html
@@ -11,18 +11,21 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="../bower_components/ionicons/css/ionicons.css" />
+    <link rel="stylesheet" href="../bower_components/ngDialog/css/ngDialog.css" />
+    <link rel="stylesheet" href="../bower_components/ngDialog/css/ngDialog-theme-default.css" />
+    <link rel="stylesheet" href="../bower_components/google-code-prettify/bin/prettify.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+
+    <script src="http://maps.google.com/maps/api/js"></script>
   </head>
   <body ng-app="popa">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
-
 
     <!-- Page content-->
     <div ng-include src="'views/header.html'"></div>
@@ -68,6 +71,9 @@
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/jquery-cookie/jquery.cookie.js"></script>
     <script src="../bower_components/angular-resource/angular-resource.js"></script>
+    <script src="../bower_components/ngDialog/js/ngDialog.js"></script>
+    <script src="../bower_components/google-code-prettify/bin/prettify.min.js"></script>
+    <script src="../bower_components/ngmap/build/scripts/ng-map.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
