--- a/app/core/index.html
+++ b/app/core/index.html
@@ -74,6 +74,8 @@
     <script src="../bower_components/ngDialog/js/ngDialog.js"></script>
     <script src="../bower_components/google-code-prettify/bin/prettify.min.js"></script>
     <script src="../bower_components/ngmap/build/scripts/ng-map.js"></script>
+    <script src="../bower_components/marked/lib/marked.js"></script>
+    <script src="../bower_components/angular-marked/angular-marked.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
