docs nearly functional

--- a/app/core/index.html
+++ b/app/core/index.html
@@ -22,15 +22,15 @@
 
     <script src="http://maps.google.com/maps/api/js"></script>
   </head>
-  <body ng-app="popa">
+  <body ng-app="popa" ng-controller="MasterCtrl">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- Page content-->
-    <div ng-include src="'views/header.html'"></div>
+    <div ng-include src="'views/header.html'" ng-hide="fullpage"></div>
 
-    <div ng-view id="main-content"></div>
+    <div ng-view id="main-content" ng-class="{'fullpage' : fullpage}"></div>
 
     <div ng-include src="'views/footer.html'"></div>
 
