--- a/app/core/index.html
+++ b/app/core/index.html
@@ -20,7 +20,15 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
-    <script src="http://maps.google.com/maps/api/js"></script>
+<!-- explicit inclusion -->>
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css' rel='stylesheet' />
+
+<!-- end explicit inclusion -->
+
   </head>
   <body ng-app="popa" ng-controller="MasterCtrl">
     <!--[if lt IE 7]>
