completed contact page

--- a/app/core/index.html
+++ b/app/core/index.html
@@ -40,7 +40,7 @@
 
     <div ng-view id="main-content" ng-class="{'fullpage' : fullpage}"></div>
 
-    <div ng-include src="'views/footer.html'"></div>
+    <div ng-include src="'views/footer.html'" ng-class="{'fullpage' : fullpage}"></div>
 
     <!-- included on a per page basis, for the time being
     <div ng-include src="'views/footer.html'"></div> -->
