more gulp config

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 </style>
 <body>
 
-  <a href="http://hart.com"><img src="/hart.png"></a>
+  <a href="http://hart.com"><img src="/images/general/hart.png"></a>
 
 </body>
 </html>
