--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>John Hofrichter</title>
+  <!-- bower:css -->
+  <!-- endbower -->
 </head>
 
 <style>
@@ -25,5 +27,8 @@
 
   <a href="http://hart.com"><img src="/images/general/hart.png"></a>
 
+
+  <!-- bower:js -->
+  <!-- endbower -->
 </body>
 </html>
