--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,6 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    justify-content: center;
-    align-items: center;
   }
 
   img {
@@ -25,8 +23,24 @@
 </style>
 <body>
 
-  <a href="http://hart.com"><img src="/images/general/hart.png"></a>
-
+  <nav>
+  <div class="nav-wrapper">
+    <a href="#!" class="brand-logo">Logo</a>
+    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+    <ul class="right hide-on-med-and-down">
+      <li><a href="sass.html">Sass</a></li>
+      <li><a href="badges.html">Components</a></li>
+      <li><a href="collapsible.html">Javascript</a></li>
+      <li><a href="mobile.html">Mobile</a></li>
+    </ul>
+    <ul class="side-nav" id="mobile-demo">
+      <li><a href="sass.html">Sass</a></li>
+      <li><a href="badges.html">Components</a></li>
+      <li><a href="collapsible.html">Javascript</a></li>
+      <li><a href="mobile.html">Mobile</a></li>
+    </ul>
+  </div>
+</nav>
 
   <!-- bower:js -->
   <!-- endbower -->
