--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,18 +3,12 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/style/main.css">
     <meta charset="utf-8">
-    <title>John M. Hofrichter</title>
+    <title>hofbucks</title>
   </head>
   <body class="center-content">
     <section "image-split">
-      <a href="https://www.linkedin.com/in/johnhofrichter">
-        <img src="images/linkedin.png" alt="linkedin"/>
-      </a>
-      <a href="http://hart.com" class="hart">
-        <img src="images/hart.png" alt="hart"/>
-      </a>
-      <a href="https://github.com/johnhof">
-        <img src="images/github.png" alt="github"/>
+      <a href="http://www.johnhofrichter.com">
+        <img src="images/hofbucks.jpc" alt="hofbucks"/>
       </a>
     </section>
   </body>
