--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,7 +8,7 @@
   <body class="center-content">
     <section "image-split">
       <a href="http://www.johnhofrichter.com">
-        <img src="images/hofbucks.jpc" alt="hofbucks"/>
+        <img src="images/hofbucks.jpg" alt="hofbucks"/>
       </a>
     </section>
   </body>
