--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,19 +4,13 @@
 
   html, body, #root {
     font-family: 'nowayregular', helvetica;
-    src: url('./fonts/noway-regular-webfont.eot');
-    src: url('./fonts/noway-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('./fonts/noway-regular-webfont.woff2') format('woff2'),
-         url('./fonts/noway-regular-webfont.woff') format('woff'),
-         url('./fonts/noway-regular-webfont.ttf') format('truetype'),
-         url('./fonts/noway-regular-webfont.svg#nowayregular') format('svg');
     font-weight: normal;
     font-style: normal;
     width: 100%;
     height: 100%;
     background-color: #F4F3EF;
     margin: 0;
-    padding: 0
+    padding: 0;
   }
 
   </style>
@@ -24,8 +18,8 @@
     <meta charset="utf-8">
     <title>John Hofrichter</title>
   </head>
-  <body>
-    <div id="root">
+  <body id="root">
+    <div>
 
     </div>
   </body>
