--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html>
+  <style>
+    html, body, #root {
+      font-family: 'nowayregular', helvetica;
+      font-weight: 'normal';
+      font-style: 'normal';
+      width: 100%;
+      height: 100%;
+      background-color: #F4F3EF;
+      margin: 0;
+      overflow-y: scroll;
+    }
+
+    * {
+      -webkit-transition: all 0.3s ease;
+      -moz-transition:    all 0.3s ease;
+      -ms-transition:     all 0.3s ease;
+      -o-transition:      all 0.3s ease;
+    }
+  </style>
   <head>
     <meta charset="utf-8">
     <title>John Hofrichter</title>
   </head>
-  <body id="root">
-    <div>
+  <body>
+    <div id="root">
 
     </div>
   </body>
