--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,6 +8,7 @@
       width: 100%;
       height: 100%;
       background-color: #F4F3EF;
+      color: #393A36; 
       margin: 0;
       overflow-y: scroll;
     }
