--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,10 +5,11 @@
       font-family: 'nowayregular', helvetica;
       font-weight: 'normal';
       font-style: 'normal';
+      font-size: '12px';
       width: 100%;
       height: 100%;
       background-color: #F4F3EF;
-      color: #393A36; 
+      color: #393A36;
       margin: 0;
       overflow-y: scroll;
     }
