--- a/client/src/index.html
+++ b/client/src/index.html
@@ -11,6 +11,7 @@
       background-color: #F4F3EF;
       color: #393A36;
       margin: 0;
+      lineHeight: '1.5';
       overflow-y: scroll;
     }
 
