--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,10 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>John Hofrichter</title>
   <style  type="text/css" media="screen">
     html, body {
-      src: url(/d8ebab6d3dae463fa5c2d25594d32794.eot),
-        url(/1a3f17c888937e4b2bd1c412f6ffb241.ttf),
-        url(/506a9d0f9be0e493307b0aa1f7eedb6e.woff),
-        url(/f9fbb43af88b754b0327e6d09840962c.woff2);
       box-sizing: border-box;
       font-family: 'nowayregular', helvetica;
       font-size: 10px;
@@ -23,7 +19,7 @@
     }
 
     body {
-      padding: 12px;
+      padding: 5em;
     }
 
     *,
@@ -74,20 +70,31 @@
       border-bottom: 0.05em solid rgb(244, 243, 239);
     }
 
-
-    /* Medium devices (landscape tablets, 768px and up) */
-    @media all and (max-width: 768px) {
+    @media (min-width: 770px) {
       h1 {
-        font-size: 2em; 
+        font-size:20em; 
       }
-    } 
-    /* Medium devices (landscape tablets, 768px and up) */
-    @media all and (min-width: 769px) {
-      h1 {
-        font-size:5em; 
+
+      body {
+        padding: 5em;
       }
     } 
 
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 10em; 
+      }
+
+      body {
+        padding: 2em;
+      }
+    } 
+    
+    @media (max-width: 600px) {
+      body {
+        padding: 0;
+      }
+    } 
 
   </style>
 </head>
